Makes sure to escape article name in Wikimedia REST requests